--- a/assets/css/press.css
+++ b/assets/css/press.css
@@ -24,6 +24,9 @@ body{
 		width: 100%;
 		height: 150%;
 	}
+	#press-prox{
+		width: 100%;
+	}
 	#press a{
 		font-size: 40px;
 		font-family: Brush-Italic;
