--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -52,9 +52,13 @@ body{
 	}
 	#about-info{
 		padding: 5% 5%;
-		font-size: 17px;
+		font-size: 15px;
 		text-align: center;
 		line-height: 2;
+	}
+	#about-info img{
+		width: 100%;
+		margin-bottom: 10%;
 	}
 	#about-info img{
 		width: 100%;
