--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -60,13 +60,10 @@ body{
 		width: 90%;
 		margin-bottom: 5%;
 	}
-	#about-info img{
-		width: 100%;
-		margin-bottom: 10%;
-	}
+	
 	#ashoka-logo{
 		width: 50% !important;
-		margin-top: 0;
+		margin-top: 5%;
 	}
 	#about-dots{
 		height: auto;
