Fourth version, .htaccess first test, db already implemented on activity.php + logo MLH + itinerario en img

--- a/assets/css/hackathon.css
+++ b/assets/css/hackathon.css
@@ -88,7 +88,7 @@ body{
 		line-height: 2;
 	}
 	
-/* Speakers */
+/* Schedule */
 	#schedule{
 		position: relative;
 		min-height: 100%;
@@ -102,6 +102,9 @@ body{
 	}
 	#schedule hr{
 		border: 1px solid #F47920;
+	}
+	#schedule-title{
+		width: 35%;
 	}
 
 /* Sponsors */
