Fourth version, Hult prize corrections 2

--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -65,3 +65,12 @@ body{
 		margin-left: 5%;
 		width: 15%;
 	}
+	#scenario-4{
+		cursor: pointer;
+		margin-top: 5%;
+		margin-left: 5%;
+		width: 15%;
+	}
+	#map{
+		width: 80%;
+	}
