--- a/assets/css/program.css
+++ b/assets/css/program.css
@@ -90,8 +90,8 @@ body{
 	#program-activities{
 		position: relative;
 		height: 60px;
-		width: 60%;
-		left: 20%;
+		width: 80%;
+		left: 10%;
 		text-align: center;
 		color: rgb(0,0,0);
 		transition: all 0.5s ease-in-out; 
@@ -105,9 +105,10 @@ body{
 		display: inline-block;
 		left: 1%;
 		padding: 2% 2%;
-		font-size: 20px;
+		font-size: 18px;
 		font-family: Geomanist-Medium;
 		color: rgb(0,0,0);
+		z-index: 100;
 		transition: all 0.5s ease-in-out; 
 			-moz-transition: all 0.5s ease-in-out;
 			-ms-transition: all 0.5s ease-in-out;
@@ -127,11 +128,11 @@ body{
 		color: #59B13E;
 	}
 	#footer-dots{
-		position: fixed;
-		bottom: 0;
+		position: relative;
 	}
 	#footer-dots img{
 		width: 100%;
+		margin-top: -10%;
 	}
 
 
