--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -125,7 +125,7 @@ body{
 	}
 	#sponsors .row img{
 		margin-left: 15%;
-		width: 60%;
+		width: 80%;
 	}
 	#sponsors-chmday{
 		position: relative;
@@ -134,7 +134,7 @@ body{
 	}
 	#sponsors-logos{
 		position: relative;
-		padding: 5% 10%;
+		padding: 5% 10% 0 3%;
 	}
 	#sponsors-logos img{
 		width: 80%;
@@ -143,7 +143,15 @@ body{
 	#sponsors-dots{
 		position: absolute;
 		width: 100%;
-		bottom: -30%;
+		bottom: -20%;
+	}
+	.row h1{
+		text-align: center;
+		font-size: 40px;
+		margin-top: 10px;
+		margin-bottom: 30px;
+		font-family: Geomanist-Medium;
+		color: #F47920;
 	}
 
 /* Inters */
