--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,7 +12,7 @@ body{
 /* Main */
 	#main{
 		position: relative;
-		min-height: 100%;
+		min-height: auto;
 		width: 100%;
 		/*background: url('../img/main.jpg') center center no-repeat;
 		background-size: cover;*/
@@ -27,18 +27,25 @@ body{
 	    -webkit-padding-start: 0px;
 	    overflow: hidden;
 	    width: 100%;
+	    height: 100%;
 	}
 	.layer {
 	    width: 100%;
+	    height: 100%;
 	}
 	.layer img{
 	    width: 100%;
+	}
+	#part1{
+		position: absolute;
+		bottom: 5%;
+		left: 2%;
 	}
 
 /* Video */
 	#video{
 		position: relative;
-		min-height: 100%;
+		min-height: auto;
 		width: 100%;
 		background-color: rgb(255,255,255);
 	}
@@ -172,8 +179,13 @@ body{
 		background-attachment: fixed;*/
 	}
 
-@media (max-width: 991px){
-
+@media (max-width: 1024px){
+	#about{
+		min-height: 75%;
+	}
+	#speakers{
+		min-height: 70%;
+	}
 }
 
 @media (max-width: 767px) and (orientation: portrait){
