--- a/assets/css/hackathon.css
+++ b/assets/css/hackathon.css
@@ -12,7 +12,7 @@ body{
 /* Main */
 	#hack{
 		position: relative;
-		min-height: 100%;
+		min-height: auto;
 		width: 100%;
 		/*background: url('../img/main.jpg') center center no-repeat;
 		background-size: cover;*/
