--- a/assets/css/hackathon.css
+++ b/assets/css/hackathon.css
@@ -45,7 +45,7 @@ body{
 /* Video */
 	#video{
 		position: relative;
-		min-height: 100%;
+		min-height: auto;
 		width: 100%;
 		background-color: rgb(255,255,255);
 	}
