--- a/assets/css/hackathon.css
+++ b/assets/css/hackathon.css
@@ -157,8 +157,10 @@ body{
 		background-attachment: fixed;*/
 	}
 
-@media (max-width: 991px){
-
+@media (max-width: 1024px) and (orientation: portrait){
+	#about-info{
+		top: 15%;
+	}
 }
 
 @media (max-width: 767px) and (orientation: portrait){
