6th version, iPad responsive correction 7

--- a/assets/css/hackathon.css
+++ b/assets/css/hackathon.css
@@ -161,6 +161,9 @@ body{
 	#about-info{
 		top: 15%;
 	}
+	#about-info div {
+	    padding: 1%;
+	}
 }
 
 @media (max-width: 767px) and (orientation: portrait){
