--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -12,7 +12,7 @@ body{
 /* Main */
 	#contact{
 		position: relative;
-		min-height: 100%;
+		height: auto;
 		width: 100%;
 		padding-top: 60px;
 		/*background: url('../img/main.jpg') center center no-repeat;
@@ -20,7 +20,7 @@ body{
 	}
 	#contact-bg{
 		position: absolute;
-		margin-top: 60px;
+		margin-top: 100px;
 		width: 100%;
 	}
 	#contact-info{
