7th version, correction 2

--- a/assets/css/hackathon.css
+++ b/assets/css/hackathon.css
@@ -126,16 +126,17 @@ body{
 	}
 	#sponsors-logos{
 		position: relative;
-		padding: 5% 10% 0 3%;
+		padding: 5% 10% 0 4%;
 	}
 	#sponsors-logos img{
 		width: 80%;
 		margin-bottom: 10%;	
+		z-index: 10;
 	}
 	#sponsors-dots{
 		position: absolute;
 		width: 100%;
-		bottom: -20%;
+		bottom: -30%;
 	}
 
 /* Inters */
